--- a/board-project/build.gradle
+++ b/board-project/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.data:spring-data-rest-hal-explorer'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'com.h2database:h2'
     implementation 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
